@@ -26,6 +26,11 @@ in a given mode, it was also expected that at least one mode is available.
 This is fixed and pcre_jit_exec returns with PCRE_ERROR_JIT_BADOPTION
 when the pattern is not optimized by JIT at all.
 
+6. The line number and related variables such as match counts in pcregrep 
+were all int variables, causing overflow when files with more than 2147483647 
+lines were processed (assuming 32-bit ints). They have all been changed to 
+unsigned long ints.
+
 
 Version 8.41 05-July-2017
 -------------------------
